# afb-libhelpers

./: .gitignore  .gitreview  CHANGELOG  CMakeLists.txt  afb-data-utils  afb-data-utils.c  afb-data-utils.h  afb-data-utils.hpp  afb-helpers++4.pc.in  afb-helpers-qt.pc.in  afb-helpers-utils.h  afb-helpers.pc.in  afb-helpers3.pc.in  afb-helpers4.pc.in  afb-libhelpers.pc.in  afb-plugin-helpers.c  afb-plugin-helpers.h  afb-req-utils.c  afb-req-utils.h  afb-timer.c  afb-timer.h  afb_list.h  book.json  curl-wrap.c  curl-wrap.h  escape.c  escape.h  filescan-utils.c  filescan-utils.h  plugin-store.c  plugin-store.h  qafbwebsocketclient.cpp  wrap-base64.c  wrap-json.c  wrap-json.h  wrap-json.test.result
docs/: README.md  SUMMARY.md  afb-helpers-book.yml  afb-timer.md  curl-wrap.md  escape.md  filescan-utils.md  json.md  qafbwebsocketclient.md  usage.md  wrap-json.md
helpers-v3/: CMakeLists.txt  afb-helpers3.pc.in  afb-libhelpers.pc  afb-timer.c  afb-timer.h  curl-wrap.c  curl-wrap.h  escape.c  escape.h  filescan-utils.c  filescan-utils.h  wrap-base64.c  wrap-base64.h  wrap-json.c  wrap-json.h  wrap-json.test.result
helpers-v4/: CMakeLists.txt  afb-data-utils  afb-data-utils.c  afb-data-utils.cpp  afb-data-utils.h  afb-data-utils.hpp  afb-helpers-utils.h  afb-helpers4-static.pc.in  afb-req-utils.c  afb-req-utils.h  ctl-compat.h  ctl-lib-plugin.h  ctl-lib.c  ctl-lib.h  ctlplug.h  plugin-store.c  plugin-store.h
packaging/deb/: agl-libafb-helpers.dsc  debian.agl-libafb-helpers-dev.install  debian.changelog  debian.control  debian.rp-libafb-helpers-bin.install  debian.rp-libafb-helpers-dev.install  debian.rules  rp-libafb-helpers.dsc
packaging/rpm/: agl-libafb-helpers.spec  rp-libafb-helpers.spec
tests/: Makefile  test++.c++
